# rust-playground

./: README.md
axum-demo/: .env  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  docker-compose.yml
axum-demo/.zed/: tasks.json
axum-demo/component/: Cargo.toml
axum-demo/component-derive/: Cargo.toml
axum-demo/component-derive/src/: lib.rs
axum-demo/component/src/: lib.rs
axum-demo/src/: main.rs
axum-demo/src/app/: application.rs
axum-demo/src/db/: database.rs  database_service_provider.rs  mod.rs
axum-demo/src/models/: user.rs
axum-demo/src/requests/: create_user_request.rs  get_user_request.rs  html_request.rs  mod.rs  signup_request.rs
axum-demo/src/routes/: counter.rs  dashboard.rs  health.rs  htmx.rs  login.rs  mod.rs  root.rs  signup.rs  users.rs
axum-demo/src/services/: counter_presenter.rs  event_bus.rs  extract.rs  login_presenter.rs  login_service_provider.rs  mod.rs  registry.rs  router.rs  service_provider.rs  signup_presenter.rs  user_login_service.rs  user_service_provider.rs
axum-demo/src/templates/: calendar_popover_template.rs  counter_page_template.rs  counter_template.rs  dashboard_template.rs  flash_template.rs  hello_template.rs  login_template.rs  mod.rs  signup_template.rs  template_collection.rs  user_template.rs
axum-demo/src/use_cases/: decrement_counter.rs  get_name.rs  increment_counter.rs  login.rs  mod.rs  signup.rs
axum-demo/static/: counter.css  counter.js
axum-demo/templates/: calendar_popover.html  counter.html  dashboard.html  login.html  root.html  signup.html  user.html
leetcode/: Cargo.toml
(+36 files in other folders)
