[package]
name = "axum-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
component = { path = "./component" }
anyhow = "1.0.102"
askama = "0.15.4"
askama_web = { version = "0.15.1", features = ["axum-0.8"] }
async-trait = "0.1"
axum = "0.8.8"
dotenvy = "0.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "migrate" ] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
